@@ -1,3 +1,9 @@
+2008-06-04  Robert Millan  <rmh@aybabtu.com>
+
+	* util/biosdisk.c (get_os_disk): Handle IDA devices.
+	* util/grub-mkdevicemap.c (get_mmc_disk_name)
+	(make_device_map): Likewise.
+
 2008-06-01  Robert Millan  <rmh@aybabtu.com>
 
 	*  util/biosdisk.c (get_drive): Verify that `map[i].drive' is non-NULL
